new endpoint for analyzer file Account Status

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -266,13 +266,12 @@
                     <ul class="provided-code">
                          <li class="provided-code">
                             <b>RESTEasy JAX-RS</b>&nbsp;Easily start your RESTful Web Services
-                            <br />&rsaquo; <code>@Path: <a href="/hello" class="path-link" target="_blank">/hello</a></code>
-                            <br />&rsaquo; <code>@Path: <a href="/upload" class="path-link" target="_blank">/upload</a></code>
+                            <br />&rsaquo; <code>@Path: <a href="/account/analyzer" class="path-link" target="_blank">/upload</a></code>
                         </li>
                     </ul>
                     <br>
 
-                    <form method="post" enctype="multipart/form-data" action="upload">
+                    <form method="post" enctype="multipart/form-data" action="account/analyzer">
                         <div>
                             <label for="file">Choose file to upload :</label>
                             <br>
