--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" type="text/css" href="index.css" />
 
         <meta charset="UTF-8">
-        <title>account-analyzer - 1.0.0-SNAPSHOT</title>
+        <title>Account-analyzer - 1.0.0-SNAPSHOT</title>
         <script>
             $(() => {
 
@@ -132,8 +132,6 @@
             <div class="grid">
                 <div class="left-column">
 
-<!--                    <h1>Account Analyzer</h1>-->
-
                     <form id="form" method="POST" action="account/analyzer" enctype="multipart/form-data">
                         <p>Choose file to upload : </p>
                         <div id="file-uploader-container">
@@ -149,23 +147,9 @@
                         <p>Interest : <span id="interest"></span></p>
                         <p>NonPaymentFee : <span id="nonPaymentFee"></span></p>
                         <p>Taxes : <span id="taxes"></span></p>
-
-<!--                        <li class="provided-code">-->
-<!--                            <b>RESTEasy JAX-RS</b>&nbsp;Easily start your RESTful Web Services-->
-<!--                            <br />&rsaquo; <code>@Path: <a href="/account/analyzer" class="path-link" target="_blank">/upload</a></code>-->
-<!--                        </li>-->
                     </ul>
                     <br>
                     <p> <b>Total :</b> <span id="total"></span></p>
-<!--                    <form id="form2" method="post" enctype="multipart/form-data" action="account/analyzer">-->
-<!--                        <div>-->
-<!--                            <label for="file">Choose file to upload :</label>-->
-<!--                            <br>-->
-<!--                            <input class="cta-button2" type="file" id="file" name="file" >-->
-
-<!--                            <button class="cta-button">Submit</button>-->
-<!--                        </div>-->
-<!--                    </form>-->
                 </div>
             </div>
 
