ahh list of transactions

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -26,8 +26,9 @@
                     text: 'Analyze ',
                     type: 'success',
                     onClick() {
-                        const confirm=DevExpress.ui.dialog.confirm('Is file correct?.')
-                        confirm.done((dialogResult)=> dialogResult?$("#form").submit():'');
+                        // const confirm=DevExpress.ui.dialog.confirm('Is file correct?.')
+                        // confirm.done((dialogResult)=> dialogResult?$("#form").submit():'');
+                        $("#form").submit();
                     },
                 });
 
