dynamic AccountService Instance

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -157,6 +157,7 @@
                         <div id="file-uploader-container">
                             <div id="file-uploader"> </div>
                         </div>
+                        <input type="hidden" name="bank" value="BHD">
                         <div id="button"></div>
                     </form>
 
