--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -157,7 +157,14 @@
                         <div id="file-uploader-container">
                             <div id="file-uploader"> </div>
                         </div>
-                        <input type="hidden" name="bank" value="BHD">
+                        <div>
+                            <label for="bank" >Selecione Banco :</label>
+                            <select name="bank" id="bank">
+<!--                                <option value="-1">Seleccione: </option>-->
+                                <option value="Popular">Popular</option>
+                                <option value="BHD">BHD</option>
+                            </select>
+                        </div>
                         <div id="button"></div>
                     </form>
 
