--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -95,7 +95,7 @@
                             <select name="bank" id="bank">
 <!--                                <option value="-1">Seleccione: </option>-->
                                 <option value="Popular">Popular</option>
-                                <option value="BHD">BHD Alpha</option>
+                                <option value="BHD">BHD (Alpha)</option>
                             </select>
                         </div>
                         <div id="button"></div>
