logic to read pdf popular

--- a/src/main/resources/META-INF/resources/index.html
+++ b/src/main/resources/META-INF/resources/index.html
@@ -99,6 +99,10 @@
                                 <option value="BHD">BHD (Alpha)</option>
                             </select>
                         </div>
+                        <div>
+                            <label for="bank" >Password :</label>
+                            <input type="password" name="pass" id="pass" value="22300843194">
+                        </div>
                         <div id="button"></div>
                     </form>
 
